--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,18 @@
     android:layout_height="160dp"
     android:src="@drawable/logo"
     android:scaleType="fitCenter" />
+    <TextView
+        android:id="@+id/cnv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Convertache"
+        android:textAlignment="center"
+        android:layout_below="@+id/tile_picture"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="27dp"
+        android:textSize="40dp"
+        android:textStyle="bold"
+        android:textColor="@color/colorConvertache"/>
 
     <Button
         android:id="@+id/btnStart"
