--- a/app/src/main/res/layout/activity_massa.xml
+++ b/app/src/main/res/layout/activity_massa.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="#66ccff"
-            android:entries="@array/waktu">
+            android:entries="@array/massa">
         </Spinner>
     </LinearLayout>
 
@@ -96,4 +96,4 @@
             android:textSize="50sp"
             android:gravity="center"/>
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
