--- a/app/src/main/res/layout/activity_uang.xml
+++ b/app/src/main/res/layout/activity_uang.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -44,12 +44,12 @@
             android:textSize="30sp" />
 
         <Spinner
-            android:id="@+id/spinBilangan"
+            android:id="@+id/spinMataUang"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:background="#66ccff"
-            android:entries="@array/waktu"></Spinner>
+            android:entries="@array/uang"></Spinner>
     </LinearLayout>
 
     <LinearLayout
@@ -95,4 +95,4 @@
             android:textSize="50sp"
             android:gravity="center"/>
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
